--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
           <div class="row">
             <div class="col-12">
               <div class="section-heading">
-                <h2 class="section-title">Get in Touch</h2>
-                <p class="section-description">Feel free to contact me anytime</p>
+                <h2 class="section-title">Contact Me</h2>
+                <!-- <p class="section-description">Feel free to contact me anytime</p> -->
               </div>
             </div>
           </div>
