--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
             <!-- Hire-->
   
       <!-- Contact-->
+      <!-- id="contact-area" -->
       <section class="single-section contact-area alt-bg" id="contact-area">
         <div class="container">
           <div class="row">
@@ -371,7 +372,7 @@
 
               
               
-              <form class="contact-form" name="PortfolioContact" action="POST" data-netlify="true">
+              <form method="POST" name="PortfolioContact" data-netlify="true">
                 <div class="row">
                   <div class="col-12 col-md-6 form-group"><input class="form-control" id="contact-name" type="text" name="name" placeholder="Name" required=""></div>
                   <div class="col-12 col-md-6 form-group"><input class="form-control" id="contact-email" type="email" name="email" placeholder="Email" required=""></div>
