--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <!-- <h6 class="content-title">A Computer Science student at University of Saskachewan, Canada</h6> -->
                 <div class="content-description">
                   <p style="text-align: justify;">
-                    I  a final year student of the Computer Science Bachelor program at the University of Saskatchewan, and I am looking forward to an exciting career in the field. I have 1+ years of experience in ASP.NET MVC web application development as an Associate Software Developer.
+                    I'm a final year student of the Computer Science Bachelor program at the University of Saskatchewan, and I am looking forward to an exciting career in the field. I have 1+ years of experience in ASP.NET MVC web application development as an Associate Software Developer.
                   </p>
                 </div>
                 <address class="content-info">
