--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <!-- <h6 class="content-title">A Computer Science student at University of Saskachewan, Canada</h6> -->
                 <div class="content-description">
                   <p style="text-align: justify;">
-                    I'm a Software Engineer and completed my Batchelor of Computer Science four-year degree from the University of Saskatchewan, Canada. I am looking forward to an exciting career in the field, and I have 1+ years of experience as an Associate Software Developer.
+                    I'm a Software Engineer and completed my Bachelor of Computer Science four-year degree from the University of Saskatchewan, Canada. I am looking forward to an exciting career in the field, and I have 1+ years of experience as an Associate Software Developer.
                   </p>
                 </div>
                 <address class="content-info">
