--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                   </div>
                   <div class="col-12 col-lg-7">
                     <div class="lightbox-content">
-                      <h3 class="content-title">Multiple chatroom chat app</h3>
+                      <h3 class="content-title">Java Chat App</h3>
                       <div class="content-description">
                         <p>I created this Java application using threads and locks in Java. The application allows clients to create, view available chat rooms, and join one. All the members of a chatroom can view and send messages to other chatroom members using Java sockets. </p>
                       </div>
@@ -191,7 +191,7 @@
                         <li class="list-inline-item single-info"><span>Technologies:</span>
                           <p>Java</p>
                         </li>
-                      </ul><a class="btn content-btn button-main button-scheme" href="https://drive.google.com/drive/folders/1JLC7LjPLeQxgK4LHSVaeItkZsUgdD-Pa?usp=drive_link" role="button">Visit Project</a>
+                      </ul><a class="btn content-btn button-main button-scheme" href="https://github.com/DulminiGuruge/Java_Chat_App/tree/master" role="button">Visit Project</a>
                     </div>
                   </div>
 
