--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <li class="list-inline-item single-info"><span>Technologies:</span>
                           <p>ASP.NET MVC, PostgreSQL, HTML5, SCSS, JS</p>
                         </li>
-                      </ul><a class="btn content-btn button-main button-scheme" href="https://drive.google.com/file/d/1PajFtE5WBr1GW99o2fXT0XbM8POhDxyf/view?usp=drive_link" role="button">Visit Project</a>
+                      </ul><a class="btn content-btn button-main button-scheme" href="https://drive.google.com/file/d/1PajFtE5WBr1GW99o2fXT0XbM8POhDxyf/view?usp=drive_link" target="_blank" role="button">Visit Project</a>
                     </div>
                   </div>
 
@@ -191,7 +191,8 @@
                         <li class="list-inline-item single-info"><span>Technologies:</span>
                           <p>Java</p>
                         </li>
-                      </ul><a class="btn content-btn button-main button-scheme" href="https://github.com/DulminiGuruge/Java_Chat_App/tree/master" role="button">Visit Project</a>
+                      </ul>
+                      <a class="btn content-btn button-main button-scheme" href="https://github.com/DulminiGuruge/Java_Chat_App/tree/master" target="_blank" role="button">Visit Project</a>
                     </div>
                   </div>
 
@@ -223,7 +224,8 @@
                       <li class="list-inline-item single-info"><span>Technologies:</span>
                         <p>Node.js, MYSQL, Embedded JavaScript script templates, Express</p>
                       </li>
-                    </ul><a class="btn content-btn button-main button-scheme" href="https://drive.google.com/file/d/1ugkatrMNISIDZZGhcek9IsTEZN4B-_MC/view?usp=drive_link" role="button">Visit Project</a>
+                    </ul>
+                    <a class="btn content-btn button-main button-scheme" href="https://github.com/DulminiGuruge/HELP_KIDS_nodejs" target="_blank" role="button">Visit Project</a>
                   </div>
                 </div>
               </div>
@@ -249,7 +251,7 @@
                       <li class="list-inline-item single-info"><span>Technologies:</span>
                         <p>Python, CSV files, D3.js</p>
                       </li>
-                    </ul><a class="btn content-btn button-main button-scheme" href="https://drive.google.com/file/d/1ugkatrMNISIDZZGhcek9IsTEZN4B-_MC/view?usp=drive_link" role="button">Visit Project</a>
+                    </ul><a class="btn content-btn button-main button-scheme" href="https://drive.google.com/file/d/1ugkatrMNISIDZZGhcek9IsTEZN4B-_MC/view?usp=drive_link" target="_blank" role="button">Visit Project</a>
                   </div>
                 </div>
               </div>
