--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <li class="list-inline-item single-info"><span>Technologies:</span>
                           <p>ASP.NET MVC, PostgreSQL, HTML5, SCSS, JS</p>
                         </li>
-                      </ul><a class="btn content-btn button-main button-scheme" href="https://drive.google.com/file/d/1PajFtE5WBr1GW99o2fXT0XbM8POhDxyf/view?usp=drive_link" target="_blank" role="button">Visit Project</a>
+                      </ul><a class="btn content-btn button-main button-scheme" href="https://github.com/DulminiGuruge/Food_Blog_ASP.NET" target="_blank" role="button">Visit Project</a>
                     </div>
                   </div>
 
