--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <!-- <h6 class="content-title">A Computer Science student at University of Saskachewan, Canada</h6> -->
                 <div class="content-description">
                   <p style="text-align: justify;">
-                    I'm a Software Engineer and completed my Bachelor of Computer Science four-year degree from the University of Saskatchewan, Canada. I am looking forward to an exciting career in the field, and I have 1+ years of experience as an Associate Software Developer.
+                    I am a recent Computer Science graduate from the University of Saskatchewan with hands-on experience in Django and ASP.NET MVC web development. Proficient in programming languages such as Python, Java, and JavaScript, I value creating efficient codes using the best data structures and delivering test-driven solutions. My projects exemplify my abilities and my commitment to staying ahead of emerging technologies while sharpening my problem-solving skills. If you seek a dynamic and results-oriented software developer who can seamlessly adapt to the industry's ever-evolving trends, I would be honoured to connect with you.
                   </p>
                 </div>
                 <address class="content-info">
