--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                       <li class="list-inline-item single-info"><span>Technologies:</span>
                         <p>Python, CSV files, D3.js</p>
                       </li>
-                    </ul><a class="btn content-btn button-main button-scheme" href="https://drive.google.com/file/d/1ugkatrMNISIDZZGhcek9IsTEZN4B-_MC/view?usp=drive_link" target="_blank" role="button">Visit Project</a>
+                    </ul><a class="btn content-btn button-main button-scheme" href="https://github.com/DulminiGuruge/NetworkVizualization" target="_blank" role="button">Visit Project</a>
                   </div>
                 </div>
               </div>
