--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <!-- <h6 class="content-title">A Computer Science student at University of Saskachewan, Canada</h6> -->
                 <div class="content-description">
                   <p style="text-align: justify;">
-                    I am a recent Computer Science graduate from the University of Saskatchewan with hands-on experience in Django and ASP.NET MVC web development. Proficient in programming languages such as Python, Java, and JavaScript, I value creating efficient codes using the best data structures and delivering test-driven solutions. My projects exemplify my abilities and my commitment to staying ahead of emerging technologies while sharpening my problem-solving skills. If you seek a dynamic and results-oriented software developer who can seamlessly adapt to the industry's ever-evolving trends, I would be honoured to connect with you.
+                    I'm a motivated Software Developer passionate about high performing , test-driven solutions and eager to learn about the latest technologies in the industry. Let's connect and see how I can contribute to your team!
                   </p>
                 </div>
                 <address class="content-info">
