Changes to links

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                           <p>Java</p>
                         </li>
                       </ul>
-                      <a class="btn content-btn button-main button-scheme" href="https://github.com/DulminiGuruge/Java_Chat_App/tree/master" target="_blank" role="button">Visit Project</a>
+                      <a class="btn content-btn button-main button-scheme" href="https://github.com/DulminiGuruge/Java_Chat_App" target="_blank" role="button">Visit Project</a>
                     </div>
                   </div>
 
@@ -251,7 +251,7 @@
                       <li class="list-inline-item single-info"><span>Technologies:</span>
                         <p>Python, CSV files, D3.js</p>
                       </li>
-                    </ul><a class="btn content-btn button-main button-scheme" href="https://github.com/DulminiGuruge/NetworkVizualization" target="_blank" role="button">Visit Project</a>
+                    </ul><a class="btn content-btn button-main button-scheme" href="https://github.com/DulminiGuruge/Data_Visualization_D3.js" target="_blank" role="button">Visit Project</a>
                   </div>
                 </div>
               </div>
