--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 </div>
                 <div class="col-12 col-lg-7">
                   <div class="lightbox-content">
-                    <h3 class="content-title">Network Vizualization</h3>
+                    <h3 class="content-title">Network Visualization</h3>
                     <div class="content-description">
                       <p>This network visualization created using D3.js shows countries' import and export trade relationships. Nodes represent the countries, and the edges represent the trade relations. I extracted the data from a CSV file using Python, used D3.js to create data visualization and added interactions when clicking on the nodes.  </p>
                       
