--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <!-- <h6 class="content-title">A Computer Science student at University of Saskachewan, Canada</h6> -->
                 <div class="content-description">
                   <p style="text-align: justify;">
-                    I'm a motivated Software Developer passionate about high performing , test-driven solutions and eager to learn about the latest technologies in the industry. Let's connect and see how I can contribute to your team!
+                    I'm a motivated Software Developer passionate about high-performing , test-driven solutions and eager to learn about the latest technologies in the industry. Let's connect and see how I can contribute to your team!
                   </p>
                 </div>
                 <address class="content-info">
